# coqui-tts-streamer

./: Cargo.toml  PLAN.md  README.md  flake.nix
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/audio-output/: Cargo.toml
crates/audio-output/src/: lib.rs
crates/audio-rodio/: Cargo.toml
crates/audio-rodio/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  document.rs  events.rs  lib.rs  pipeline.rs  ports.rs  segment.rs  segmenter.rs  state.rs
crates/tts-coqui/: Cargo.toml
crates/tts-coqui/src/: lib.rs
crates/ui-tui/: Cargo.toml
crates/ui-tui/src/: lib.rs
fixtures/: city-layers.txt  quote-heavy-thread.txt
