[workspace]
members = [
  "crates/core",
  "crates/tts-coqui",
  "crates/audio-output",
  "crates/audio-rodio",
  "crates/ui-tui",
  "crates/app",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.28.1"
hound = "3.5.1"
libc = "0.2.185"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
