[package]
name = "coqui-tts-streamer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
streamer-audio-process = { path = "../audio-rodio" }
streamer-core = { path = "../core" }
streamer-tts-coqui = { path = "../tts-coqui" }
streamer-ui-tui = { path = "../ui-tui" }
tokio.workspace = true
